feat(sentry): add config and some tests

--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,5 @@ MAILER_PASSWORD=
 MAILER_ENCRYPTION=tls
 
 MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+
+SENTRY_DSN=https://65ad894ea09a4384b18d245bb56c83dd@o4505380543070208.ingest.sentry.io/4505380548378624
