feat(forms): without symfony only dto and ajax

--- a/symfony/config/routes.yaml
+++ b/symfony/config/routes.yaml
@@ -1,3 +1,9 @@
 controllers:
     resource: ../src/Controller/
     type: attribute
+
+apiControllers:
+    resource: ../src/Controller/API
+    type: attribute
+    prefix: /api
+    name_prefix: api_
