feat:change to postgre and refacto all dockerfile and docker-compose with AI

--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,15 @@
 APP_NAME='Symfony Starter'
 APP_ENV=dev
-APP_SECRET=a357f09b9a2144dd35eecbff69769c7c04d7dd41
+APP_SECRET=ChangeMe_GenerateWith_bin_console
 APP_URL=http://localhost
 # set it to 1 or 0 to enable / disable the debug mode
 APP_DEBUG=1
 
-# This variable must be named like this MYSQL_*** they are used by the container and well configured into laravel database configuration
-MYSQL_HOST=dbstarter
-MYSQL_PORT=3306
-MYSQL_DATABASE=symfonystarter
-MYSQL_USER=symfonystarter
-MYSQL_PASSWORD=symfonystarter
-MYSQL_ROOT_PASSWORD=symfonystarter
+###> doctrine/doctrine-bundle ###
+DATABASE_URL="pgsql://symfony:symfony@db:5432/symfony?serverVersion=16&charset=utf8"
+###< doctrine/doctrine-bundle ###
 
 MAILER_NOREPLY_EMAIL=no-reply@symfonystarter.com
-MAILER_TRANSPORT=smtp
-MAILER_HOST=smtp.mailtrap.io
-MAILER_PORT=2525
-MAILER_URL=smtp://smtp.mailtrap.io:2525
-MAILER_USERNAME=
-MAILER_PASSWORD=
-MAILER_ENCRYPTION=tls
+MAILER_DSN=smtp://mailcatcher:1025
 
 MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
