--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,22 +1,33 @@
 server {
- server_name ~.*;
- client_max_body_size 20M;
- listen 80;
+    listen 80;
+    server_name localhost;
 
- location / {
-		 root /var/www/html/public;
-		 try_files $uri /index.php$is_args$args;
- }
+    root /var/www/html/public;
+    index index.php index.html;
 
- location ~ ^/index\.php(/|$) {
+    # Taille max des uploads
+    client_max_body_size 20M;
 
-		 fastcgi_pass php:9000;
-		 fastcgi_buffers 16 16k;
-		 fastcgi_buffer_size 32k;
-		 include fastcgi_params;
-		 fastcgi_param SCRIPT_FILENAME /var/www/html/public/index.php;
- }
+    location / {
+        try_files $uri /index.php$is_args$args;
+    }
 
- error_log  /var/log/nginx/error.log;
- access_log /var/log/nginx/access.log;
+    # Ne permettre que index.php
+    location ~ ^/index\.php(/|$) {
+        include fastcgi.conf;
+        fastcgi_pass php:9000;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
+        fastcgi_buffers 16 16k;
+        fastcgi_buffer_size 32k;
+    }
+
+    # Bloquer l'accès aux autres fichiers .php
+    location ~ \.php$ {
+        return 404;
+    }
+
+    location ~ /\.ht {
+        deny all;
+    }
 }
