--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -11,7 +11,7 @@ services:
     depends_on:
       - db
     networks:
-      - symfony
+      - symfony-starter
 
   nginx:
     image: nginx:1.27-alpine
@@ -24,22 +24,22 @@ services:
     depends_on:
       - php
     networks:
-      - symfony
+      - symfony-starter
 
   db:
     image: postgres:16
     container_name: symfony-postgres
     environment:
-      POSTGRES_USER: symfony
-      POSTGRES_PASSWORD: symfony
-      POSTGRES_DB: symfony
+      POSTGRES_USER: symfony-starter
+      POSTGRES_PASSWORD: symfony-starter
+      POSTGRES_DB: symfony-starter
     volumes:
       - postgres_data:/var/lib/postgresql/data
     networks:
-      - symfony
+      - symfony-starter
 
 volumes:
   postgres_data:
 
 networks:
-  symfony:
+  symfony-starter:
