update: composer recipe updated

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ APP_URL=http://localhost
 APP_DEBUG=1
 
 ###> doctrine/doctrine-bundle ###
-DATABASE_URL="pgsql://symfony-starter:symfony@db:5432/symfony?serverVersion=16&charset=utf8"
+DATABASE_URL="pgsql://symfony-starter:symfony-starter@db:5432/symfony-starter?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
 MAILER_NOREPLY_EMAIL=no-reply@symfonystarter.com
