feat: Migrate to PHP 8.5, Symfony 8.0 and PostgreSQL 17.8
Major upgrades:
- PHP: 8.4 → 8.5 (latest stable)
- Symfony: 7.3 → 8.0 (latest stable)
- PostgreSQL: 16 → 17.8 (stable with LTS)

Changes:
- Update Dockerfile to use php:8.5-fpm and composer:2.9
- Update all Symfony packages from 7.3.* to 8.0.*
- Update dev dependencies: php-cs-fixer ^3.88, phpstan ^2.0
- Update doctrine-bundle to ^4.0 for Symfony 8 compatibility
- Remove deprecated Doctrine options (auto_generate_proxy_classes, proxy_dir)
- Fix permissions for www-data on vendor directory in production
- Add install-prod target in Makefile
- Update PostgreSQL images to 17.8 in both dev and prod configs

BREAKING CHANGES:
- Requires PHP 8.5+
- Requires Symfony 8.0 compatible bundles
- Doctrine configuration updated for v3.x compatibility

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,16 +1,14 @@
 # ---------------------------------------------------------
 # Étape 1 : Build vendors avec Composer
 # ---------------------------------------------------------
-FROM composer:2.8 AS vendor
+FROM composer:2.9 AS vendor
 
 WORKDIR /app
 COPY symfony/composer.json symfony/composer.lock ./
 RUN composer install --no-dev --prefer-dist --optimize-autoloader --no-interaction --no-scripts
 
 # ---------------------------------------------------------
-# Étape 2 : Image PHP-FPM
-# ---------------------------------------------------------
-FROM php:8.4-fpm AS base
+FROM php:8.5-fpm AS base
 
 # Variables d'environnement
 ENV COMPOSER_ALLOW_SUPERUSER=1 \
@@ -27,7 +25,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
  && update-ca-certificates \
  && docker-php-ext-configure gd --with-freetype --with-jpeg \
  && docker-php-ext-install -j$(nproc) \
-    gd intl mbstring opcache pdo_pgsql zip bcmath \
+    gd intl mbstring pdo_pgsql zip bcmath \
  && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /var/www/html
@@ -69,7 +67,7 @@ COPY symfony .
 # Copier le fichier .env (si présent) pour les variables d'environnement en prod
 COPY .env ./.env
 
-RUN chown -R www-data:www-data /var/www/html/var
+RUN chown -R www-data:www-data /var/www/html/var /var/www/html/vendor
 
 # Optimiser l'autoload en production (sans exécuter les scripts)
 RUN composer dump-autoload --no-dev --classmap-authoritative --optimize
